; ModuleID = '/home/carl/AnghaBench/systemd/src/boot/extr_bootctl.c_verb_random_seed.c'
source_filename = "/home/carl/AnghaBench/systemd/src/boot/extr_bootctl.c_verb_random_seed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arg_esp_path = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**, i8*)* @verb_random_seed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @verb_random_seed(i32 %0, i8** %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8** %1, i8*** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = call i32 @acquire_esp(i32 0, i32* null, i32* null, i32* null, i32* null)
  store i32 %9, i32* %8, align 4
  %10 = load i32, i32* %8, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = load i32, i32* %8, align 4
  store i32 %13, i32* %4, align 4
  br label %23

14:                                               ; preds = %3
  %15 = load i32, i32* @arg_esp_path, align 4
  %16 = call i32 @install_random_seed(i32 %15)
  store i32 %16, i32* %8, align 4
  %17 = load i32, i32* %8, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %14
  %20 = load i32, i32* %8, align 4
  store i32 %20, i32* %4, align 4
  br label %23

21:                                               ; preds = %14
  %22 = call i32 (...) @sync_everything()
  store i32 0, i32* %4, align 4
  br label %23

23:                                               ; preds = %21, %19, %12
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i32 @acquire_esp(i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @install_random_seed(i32) #1

declare dso_local i32 @sync_everything(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
